2008-10-15  David A. Capello  <davidcapello@gmail.com>

	* src/dialogs/filesel.cpp (ase_file_selector): Better handling of
	special file-names in the entry field (filename_entry).

2008-10-14  David A. Capello  <davidcapello@gmail.com>

	* src/jinete/jstring.cpp (jstring::separator): Fixed for Windows (\).

2008-10-13  David A. Capello  <davidcapello@gmail.com>

	* src/raster/gfxobj.cpp (_gfxobj_set_id): Fixed (the object is
	removed from the map before its ID is changed).

	* src/raster/stock.cpp (Stock::Stock): Fixed.

	* src/raster/undoable.cpp (Undoable::crop_sprite)
	(Undoable::crop_layer, Undoable::autocrop_sprite)
	(Undoable::replace_stock_image): Added.

	* src/raster/image.cpp (image_shrink_rect): Added.

	* src/raster/gfxobj.cpp (objects_map): Replaced JList 'objects'
	by a 'objects_map' (a std::map).

	* src/raster/sprite.cpp (~Sprite),
	* src/modules/palettes.cpp (exit_module_palette):
	* src/commands/cmd_palette_editor.cpp (load_command): Fixed a
	serious bug where palettes were not freed right (jfree instead of
	palette_free). It leaves dead-pointers in the collection of
	graphics objects in 'gfxobj.cpp'.

	* config.h: Added new overloaded new/delete operators to use
	jmalloc/jfree (useful when use MEMLEAK detector).

	* src/core/file_system.cpp: Modified to use "jstring" instead of
	"char*", and "std::map" instead of "HashTable".

2008-10-11  David A. Capello  <davidcapello@gmail.com>

	* src/dialogs/filesel.cpp (ase_file_selector): Now it uses
	"jstring" instead of "char*".

	* src/jinete/jstring.h (jstring): Added.

	* src/raster/undoable.cpp (Undoable::set_constant_frame_rate): Added.
	(Undoable::set_frame_length): Renamed to set_frame_duration.

	* src/commands/cmd_frame_properties.cpp (dialogs_frame_length):
	Added undo.

2008-10-10  David A. Capello  <davidcapello@gmail.com>

	* src/util/misc.cpp (ClearMask): Removed.

	* src/util/clipbrd.cpp (cut_to_clipboard): Use Undoable::clear_mask now.
